--- a/rtcdemo/demo.html
+++ b/rtcdemo/demo.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>RTC Demo</title>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script src="../scripts/jquery-3.4.1.min.js"></script>
-    <script src="../scripts/jquery.signalR-2.2.2.min.js"></script>
-    <script src="https://localhost:44338/signalr/hubs"></script>
     <script src="video-stream-merger.js"></script>
     <script src="demo.js"></script>
 
