--- a/1to1meeting/index.html
+++ b/1to1meeting/index.html
@@ -35,13 +35,14 @@
 
     <script src="jquery-3.4.1.min.js"></script>
     <script src="jquery.signalR-2.2.2.min.js"></script>
-     <script src="https://webrtcss.azurewebsites.net/signalr/hubs"></script> 
-    <!--<script src="https://localhost:44338/signalr/hubs"></script>-->
+    <!--<script src="https://webrtcss.azurewebsites.net/signalr/hubs"></script>-->
+    <script src="https://localhost:44338/signalr/hubs"></script>
     <!--<script src="video-stream-merger.js"></script>-->
     <script src="demo.js"></script>
 
     <script>
         var connection_initiated = false;
+
 
         $(function () {
             const urlParams = new URLSearchParams(window.location.search);
@@ -57,8 +58,8 @@
             // Set up the SignalR connection
             $.connection.hub.logging = true;
             var hub = $.connection.webRtcHub;
-            //$.connection.hub.url = 'https://localhost:44338/signalr/hubs';
-            $.connection.hub.url = 'https://webrtcss.azurewebsites.net/signalr/hubs';
+            $.connection.hub.url = 'https://localhost:44338/signalr/hubs';
+            //$.connection.hub.url = 'https://webrtcss.azurewebsites.net/signalr/hubs';
 
             var serverFn = function (data) {
                 hub.server.send(data);
@@ -73,6 +74,12 @@
                 $('#other h2').text(other_user_id);
             };
 
+            hub.client.otherUserLeft = function () {
+                $('#other h2').text("");
+                Demo.closeConnection();
+            };
+
+            
             $.connection.hub.start(function () {
                 console.log('connected to signal server.');
             }).done(function () {
@@ -86,6 +93,7 @@
                 }
             });
 
+            
 
             Demo.init(serverFn);
         });
@@ -107,7 +115,7 @@
             </div>
         </div>
         <!--<audio autoplay controls id="localAudioCtr" ></audio>-->
-        <audio autoplay controls style="display:none" id="remoteAudioCtr" ></audio>
+        <audio autoplay controls style="display:none" id="remoteAudioCtr"></audio>
     </div>
     <div style="clear: both;"></div>
     <div class="toolbox">
